# Honda-Insight-ZE1-OBD-Diagnosis-App-for-Android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/texelography/hybridinsight/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/app/: diagnosis_reader_application.cpp  diagnosis_reader_application.h  main.cpp  obd_data_repository.cpp  obd_data_repository.h
app/src/main/cpp/app/ble_communication/: ble_request_queue.cpp  ble_request_queue.hpp  obd_ble_interface.cpp  obd_ble_interface.h
app/src/main/cpp/app/hmi/: hmi_main.cpp  hmi_main.h
app/src/main/cpp/app/shared/: obd_ble_shared.hpp  obd_parameters.cpp
app/src/main/cpp/driver/ble/: ble_interface.cpp  ble_interface.h
app/src/main/cpp/driver/ble/adapt/: ble_configuration.cpp  ble_configuration.hpp
app/src/main/cpp/driver/ble/platform_specific/: ble_platform_specific.cpp  ble_platform_specific.h
app/src/main/cpp/hmi_to_delete/: hmi_state_machine.cpp  hmi_state_machine.hpp  hmi_thread.cpp  hmi_thread.hpp
app/src/main/cpp/hmi_to_delete/forms/: form_base.cpp  form_base.hpp  form_main.cpp  form_main.hpp  form_obd_value_list.cpp  form_obd_value_list.hpp  form_readyness_flags.cpp  form_readyness_flags.hpp
app/src/main/cpp/hmi_to_delete/widgets/: gui_element.cpp  gui_element.hpp  input.cpp  input.hpp  obd_value_bar.cpp  obd_value_bar.hpp  obd_value_list_entry.cpp  obd_value_list_entry.hpp
app/src/main/cpp/midware/data_pool/: data_pool.cpp  data_pool.hpp  data_pool.i  data_pool_accessor.cpp  data_pool_accessor.hpp  data_pool_accessor_java.cpp  example_wrap.cpp  run_swig.bat
app/src/main/cpp/midware/events/: event_handler.h
app/src/main/cpp/midware/exception_storage/: exception_storage.cpp  exception_storage.h
app/src/main/cpp/midware/threads/: cyclic_thread.cpp  cyclic_thread.h
app/src/main/cpp/midware/trace/: trace.cpp  trace.h
app/src/main/cpp/obd_types/: obd_data.cpp  obd_data.h  obd_error_code.h
app/src/main/java/: BluetoothInterface.java
app/src/main/java/com/texelography/hybridinsight/: BluetoothService.java  DataView.java  IMABatteryView.java  MainView.java  OBDErrorCodesView.java  OBDValueListEntry.java  OBDValueListView.java  ReadynessFlagsView.java  SplashViewActivity.java
app/src/main/java/com/texelography/hybridinsight/datapool/: DataPoolDisplayedElementData.java  DataPoolIMAState.java  DataPoolOBDDTC.java  DataPoolOBDData.java  DataPoolOBDReadynessCode.java  data_pool.java  data_poolJNI.java
app/src/main/res/layout/: activity_ima_battery_view.xml  activity_main_view.xml  activity_obd_error_codes.xml  activity_obd_value_list_view.xml  activity_readyness_flags.xml  activity_splash_view.xml  obd_value_list_entry_view.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/com/texelography/hybridinsight/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
